src/test/ui/assoc-inherent.stderr
error: associated type in `impl` without body
  --> $DIR/assoc-inherent.rs:14:5
   |
LL |     type Baz;
   |     ^^^^^^^^-
   |             |
   |             help: provide a definition for the type: `= <type>;`

error[E0223]: ambiguous associated type
  --> $DIR/assoc-inherent.rs:18:13
   |
LL |     let x : Foo::Bar;
   |             ^^^^^^^^ help: use fully-qualified syntax: `<Foo as Trait>::Bar`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0223`.
